# order/app/routes.go
@@ -7,3 +7,14 @@ import (
 func HealthCheckRouter(gin *gin.Engine) {
 	gin.GET("/", HealthCheck())
 }
+
+func OrderRouter(router *gin.Engine) {
+
+	router.POST("/order", orderHandler.handleOrder())
+	router.GET("/orders", orderHandler.HandleGetAllRecords())
+	router.GET("/order/:id", orderHandler.HandleGetOrderRecordByID())
+	router.GET("/order/user/:user_id", orderHandler.HandleGetOrderRecordsByUserID())
+	router.GET("/order/status/:status", orderHandler.HandleGetOrderRecordsByStatus())
+	router.PUT("/order/status", orderHandler.handleUpdateOrderStatus())
+	router.DELETE("/order/:id", orderHandler.HandleDeleteOrderById())
+}
